--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <style name="Theme.NekoPlayer" parent="android:Theme.DeviceDefault.NoActionBar">
-        <item name="android:windowBackground">@android:color/black</item>
+        <item name="android:windowBackground">?android:attr/windowBackground</item>
         <item name="android:windowIsTranslucent">false</item>
-        <item name="android:colorBackground">@android:color/black</item>
+        <item name="android:colorBackground">?android:attr/colorBackground</item>
     </style>
 </resources>
